# jetlend_test_promocode

./: .dockerignore  .env.example  README.md  pyproject.toml
src/: urls.py
src/apps/orders/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_table_alter_orderitem_table.py
src/apps/products/: admin.py  apps.py  models.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_category_table_alter_product_table.py  0003_product_stock.py
src/apps/promocodes/: admin.py  apps.py  models.py  services.py
src/apps/promocodes/migrations/: 0001_initial.py  0002_alter_promocode_table.py
src/apps/users/: admin.py  apps.py  models.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_phone_number.py  0003_alter_user_table.py
src/core/: models.py  settings.py  wsgi.py
